--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -3,9 +3,8 @@
 dependencies {
     api('com.github.GTNewHorizons:OpenModsLib:0.11.1:dev')
 
-
+    devOnlyNonPublishable('com.github.GTNewHorizons:NotEnoughItems:2.6.39-GTNH:dev')
     compileOnly('openperipheral:OpenPeripheralCore-API:3.4.1')
-    compileOnly('com.github.GTNewHorizons:NotEnoughItems:2.6.33-GTNH:dev')
     compileOnly('curse.maven:computercraft-67504:2269339')
-    compileOnly('com.github.GTNewHorizons:Mobs-Info:0.4.5-GTNH:dev')
+    compileOnly('com.github.GTNewHorizons:Mobs-Info:0.4.6-GTNH:dev')
 }
